# PatchwerkRadio

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  radio.cfg
cfg/: local.cfg  radio.cfg
libpatchwerk/: CMakeLists.txt
libpatchwerk/include/: api_process.h  audio_buffer.h  audio_synthesis_process.h  broadcast_process.h  config.h  encoder_process.h  file_utils.h  filechunk.h  logging.h  messages.h  ogg_encoder.h  patch_chooser_process.h  pipe_utils.h
libpatchwerk/src/: api_process.c  audio_buffer.c  audio_synthesis_process.c  broadcast_process.c  config.c  encoder_process.c  file_utils.c  filechunk.c  messages.c  ogg_encoder.c  patch_chooser_process.c  pipe_utils.c
lua/: patch_chooser.lua  patch_chooser_lib.lua  webserver.lua
main/: CMakeLists.txt
main/src/: main.c
patches/: test.pd
patches/rumblesan/test1/: main.pd
patches/rumblesan/test2/: main.pd
patches/rumblesan/test3/: main.pd
patches/rumblesan/test4/: main.pd
tests/: CMakeLists.txt
tests/include/: minunit.h
tests/src/: test-audio-synthesis.c  test-config.c  test-encoder.c  test-file-utils.c  test-filechunk.c  test-messages.c  test-patch-chooser.c
